Labs/Istio/simple_canary/1_services.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: srv
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  namespace: srv
  labels:
    app: mt1
  name: mt1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mt1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: srv
  labels:
    app: mt1
  name: mt1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mt1
      ver: "1"
  template:
    metadata:
      labels:
        app: mt1
        ver: "1"
    spec:
      containers:
      - image: przemekmalak/multitool
        name: multitool
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: srv
  labels:
    app: mt1
  name: mt1b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mt1
      ver: "2"
  template:
    metadata:
      labels:
        app: mt1
        ver: "2"
    spec:
      containers:
      - image: przemekmalak/multitool
        name: multitool
